# what-a-face

./: Dockerfile  README.md  pyproject.toml
data/extracted_embeddings/: allowed_embeddings.pkl  allowed_embeddings_hq.pkl
src/: config.py  embeddings_manager.py  run.py  update_embeddings.py
